--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=http://localhost:8085
+VITE_API_BASE_URL=https://dating-app-1-svjx.onrender.com
 VITE_APP_NAME=LoveMatch
 VITE_APP_VERSION=1.0.0
